Remove margins for ul in tables. Better align table headers, like before making thead fixed, when making thead fixed. Implement a back button behaviour. Only fixate head on tables with class "fixed-head-enabled". Use outerWidth and outerHeight instead of inner.

--- a/src/css/partials/molecules/_recommended-drugs.scss
+++ b/src/css/partials/molecules/_recommended-drugs.scss
@@ -229,10 +229,16 @@
 				display: none;
 			}
 		}
+
+		ul {
+			margin-top: 0;
+			margin-bottom: 0;
+		}
 	}
 
 	td, th {
 		border-width: 0;
+		box-sizing: border-box;
 		@include rhythm(0, 0.25, 0.25, 0);
 		padding-left: 1em;
 		padding-right: 1em;
@@ -320,4 +326,8 @@ table.fixed-head {
 			}
 		}
 	}
+}
+
+.showing-adminbar table.fixed-head thead {
+	top: 122px;
 }
